Day16/Day16_ecs_fargate_lab.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: ECS Fargate Service with Application Load Balancer

Parameters:

  VpcId:
    Type: AWS::EC2::VPC::Id

  PublicSubnet1:
    Type: AWS::EC2::Subnet::Id

  PublicSubnet2:
    Type: AWS::EC2::Subnet::Id

  ECRImage:
    Type: String
    Description: ECR image URI
    Default: 386757865964.dkr.ecr.us-east-1.amazonaws.com/sunil-ecr:v2

Resources:

  ECSCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName:sunil-fargate-cluster

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP traffic
      VpcId: !Ref VpcId

      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  ECSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ECS Tasks
      VpcId: !Ref VpcId

      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          SourceSecurityGroupId: !Ref ALBSecurityGroup

  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name:sunil-alb
      Scheme: internet-facing
      Type: application

      SecurityGroups:
        - !Ref ALBSecurityGroup

      Subnets:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2

  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name:sunil-targets
      Port: 8080
      Protocol: HTTP
      TargetType: ip
      VpcId: !Ref VpcId

      HealthCheckPath: /
      HealthCheckProtocol: HTTP

  Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP

      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroup

  ECSExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: ecsTaskExecutionRolesunil

      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow

            Principal:
              Service:
                - ecs-tasks.amazonaws.com

            Action:
              - sts:AssumeRole

      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy

  TaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:

      Family:sunil-app

      RequiresCompatibilities:
        - FARGATE

      NetworkMode: awsvpc

      Cpu: 256
      Memory: 512

      ExecutionRoleArn: !GetAtt ECSExecutionRole.Arn

      ContainerDefinitions:
        - Name:sunil-app

          Image: !Ref ECRImage

          Essential: true

          PortMappings:
            - ContainerPort: 8080

          Environment:
            - Name: APP_MESSAGE1
              Value:sunil from ECS Fargate
            - Name: APP_MESSAGE2
              Value: Testing Enviroment

  ECSService:
    Type: AWS::ECS::Service
    DependsOn:
      - Listener

    Properties:

      ServiceName:sunil-service

      Cluster: !Ref ECSCluster

      LaunchType: FARGATE

      DesiredCount: 1

      TaskDefinition: !Ref TaskDefinition

      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED

          SecurityGroups:
            - !Ref ECSSecurityGroup

          Subnets:
            - !Ref PublicSubnet1
            - !Ref PublicSubnet2

      LoadBalancers:
        - ContainerName:sunil-app
          ContainerPort: 8080
          TargetGroupArn: !Ref TargetGroup

Outputs:

  LoadBalancerURL:
    Description: URL of the Application Load Balancer
    Value: !Sub
      - http://${DNS}
      - DNS: !GetAtt ApplicationLoadBalancer.DNSName
